fix chrome img stretch issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2442,8 +2442,10 @@ Cover
   text-align: center;
 }
 .speaker_box .speaker_img img {
-  height: 100%;
-  max-width: auto;
+  /* height: 100%; */
+  /* max-width: auto; */
+  max-width: 100%;
+    max-height: 100%;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
@@ -2501,8 +2503,6 @@ Cover
   background-color: #f50136;
 }
 .speaker_box:hover .speaker_img img {
-  height: 100%;
-  max-width: auto;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
   -webkit-transition: all ease-in-out 0.4s;
